--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,7 @@ body {
   line-height: 1.2;
 }
 
+/* App styles */
 div#app {
   display: flex;
   justify-content: center;
@@ -49,7 +50,10 @@ div#app {
 }
 
 .background {
-  background-image: url('../img/map-bg-x1.png');
+  position: relative;
+
   width: 1920px;
   height: 1080px;
+
+  background-image: url('../img/map-bg-x1.png');
 }
