--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,6 +60,37 @@ body {
   background-image: url('../img/map-bg-x1.png');
 }
 
+.open-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 50px;
+  height: 50px;
+  border: 0;
+
+  background-color: #00532B;
+
+  font-weight: 700;
+  font-size: 16px;
+  color: white;
+
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+
+  cursor: pointer;
+}
+
+.open-button-1 {
+  top: 89px;
+  left: 474px;
+}
+
+.open-button-2 {
+  top: 221px;
+  left: 580px;
+}
+
 /* Modal */
 .modal {
   position: fixed;
@@ -126,6 +157,7 @@ body {
 /* Modal header */
 .modal-header {
   display: flex;
+  align-items: center;
   margin-bottom: 18px;
 }
 
@@ -215,6 +247,7 @@ body {
 .button {
   position: relative;
 
+  display: inline-flex;
   padding: 26px;
   border: 0;
   border-radius: 12px;
@@ -228,6 +261,7 @@ body {
   line-height: 140%;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  text-decoration: none;
 
   z-index: 2;
 
