--- a/src/widget/map/ui/Map.module.css
+++ b/src/widget/map/ui/Map.module.css
@@ -1,6 +1,6 @@
 .map {
-  width: 1280px;
-  height: 720px;
+  width: 100%;
+  height: 100%;
 
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
