--- a/src/shared/ui/Modal/Modal.module.css
+++ b/src/shared/ui/Modal/Modal.module.css
@@ -7,7 +7,7 @@
 
   width: 100%;
   height: 100%;
-  padding: 30px 10px;
+  padding: 25px 16px;
 
   overflow-y: auto;
   overflow-x: hidden;
@@ -36,4 +36,15 @@
 .exit {
   opacity: 0;
   visibility: hidden;
+}
+
+@media screen and (max-width: 991px) {
+  .modal {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .inner {
+    align-items: flex-end;
+  }
 }
