--- a/src/entities/module/ui/Module/Module.module.css
+++ b/src/entities/module/ui/Module/Module.module.css
@@ -33,51 +33,8 @@
   margin-bottom: 18px;
 }
 
-.module {
-  position: relative;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 149px;
-  height: 41px;
-
+.moduleTitle {
   margin-right: 25px;
-
-  box-shadow: 0px 1px 25px 2px rgba(225, 139, 38, 0.25);
-  border-radius: 7px;
-
-  background-color: #86632F;
-
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 140%;
-  text-transform: uppercase;
-
-  z-index: 2;
-}
-
-.module span {
-  margin-top: -3px;
-}
-
-.module::before {
-  content: '';
-
-  position: absolute;
-  top: -3px;
-  left: 0;
-
-  width: 159px;
-  height: 41px;
-
-  background: linear-gradient(85.26deg, #442C05 -19.66%, #E3C67C 44.4%, #5F4311 106.69%);
-  border-radius: 7px;
-
-  -webkit-clip-path: polygon(0 0, 102% 0%, 93% 99%, 0% 100%);
-  clip-path: polygon(0 0, 102% 0%, 93% 99%, 0% 100%);
-
-  z-index: -1;
 }
 
 .title {
@@ -188,11 +145,6 @@
 
   .title {
     font-size: 1.6rem;
-  }
-
-  .module {
-    margin-bottom: 25px;
-    font-size: 10px;
   }
 
   .list {
