fix: add border-radius

--- a/src/features/ModuleController/ModuleController.module.css
+++ b/src/features/ModuleController/ModuleController.module.css
@@ -18,6 +18,7 @@
   max-width: 343px;
   height: 155px;
   padding: 17px 14px 20px;
+  border-radius: 12px;
 
   color: white;
   background-color: #1c1803;
