--- a/src/entities/module/ui/ModuleToken/ModuleToken.module.css
+++ b/src/entities/module/ui/ModuleToken/ModuleToken.module.css
@@ -1,4 +1,4 @@
-.moduleTitle {
+.token {
   position: relative;
 
   display: flex;
@@ -16,11 +16,11 @@
   z-index: 2;
 }
 
-.moduleTitle span {
+.token span {
   margin-top: -3px;
 }
 
-.moduleTitle::before {
+.token::before {
   content: '';
 
   position: absolute;
@@ -36,7 +36,7 @@
   z-index: -1;
 }
 
-.moduleTitle.big {
+.token.big {
   width: 149px;
   height: 41px;
 
@@ -44,12 +44,12 @@
   font-size: 1.2rem;
 }
 
-.moduleTitle.big::before{
+.token.big::before{
   width: 159px;
   height: 41px;
 }
 
-.moduleTitle.small {
+.token.small {
   width: 73px;
   height: 22px;
 
@@ -57,7 +57,7 @@
   font-size: 0.8rem;
 }
 
-.moduleTitle.small::before{
+.token.small::before{
   width: 78px;
   height: 22px;
 }
