--- a/src/entities/module/ui/ModuleToken/ModuleToken.module.css
+++ b/src/entities/module/ui/ModuleToken/ModuleToken.module.css
@@ -61,3 +61,18 @@
   width: 78px;
   height: 22px;
 }
+
+@media screen and (max-width: 991px) {
+  .token.big {
+    width: 125px;
+    height: 35px;
+  
+    font-weight: 700;
+    font-size: 1.2rem;
+  }
+  
+  .token.big::before{
+    width: 134px;
+    height: 35px;
+  }
+}
