--- a/src/entities/map/ui/Region/Region.module.css
+++ b/src/entities/map/ui/Region/Region.module.css
@@ -8,10 +8,11 @@
 .region.active {
   stroke: #2DDE5F;
   stroke-width: 3px;
+  cursor: pointer;
 }
 
 .region.locked {
-  fill: rgba(0, 0, 0, 0.25); 
+  fill: rgba(0, 0, 0, 0.25);
   stroke: #E4E4E4;
   stroke-width: 1px;
 }
