fix: modal styles

--- a/src/entities/module/ui/Module/Module.module.css
+++ b/src/entities/module/ui/Module/Module.module.css
@@ -1,8 +1,10 @@
 .body {
   position: relative;
 
-  width: 100%;
-  max-width: 862px;
+  display: flex;
+  flex-direction: column;
+
+  width: 862px;
   min-height: 368px;
 
   padding: 28px 40px 35px 280px;
@@ -10,20 +12,6 @@
 
   color: white;
   background-color: rgba(0, 0, 0, 0.753);
-  background-size: cover;
-}
-
-.body::before {
-  content: '';
-
-  position: absolute;
-  left: 0;
-  top: -20px;
-
-  display: block;
-  width: 290px;
-  height: 362px;
-
   background-size: cover;
 }
 
@@ -42,6 +30,12 @@
   max-width: 250px;
   font-size: 2rem;
   line-height: 140%;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .list {
@@ -97,6 +91,8 @@
 
   display: inline-flex;
   padding: 26px;
+  margin: auto auto 0 0;
+
   border: 0;
   border-radius: 12px;
 
@@ -145,20 +141,10 @@
 
 @media screen and (max-width: 991px) {
   .body {
-    max-width: 350px;
+    width: 350px;
     margin-top: auto;
     padding: 18px 18px 25px;
     border-radius: 6px;
-  }
-
-  .body::before {
-    position: absolute;
-    left: auto;
-    right: 0;
-    top: 10px;
-
-    width: 134px;
-    height: 174px;
   }
 
   .header {
