--- a/src/widget/map/ui/Map/Map.module.css
+++ b/src/widget/map/ui/Map/Map.module.css
@@ -26,6 +26,7 @@
 
 .previewBlock {
   position: absolute;
+  z-index: 2;
 }
 
 .previewBlock.active .previewBlockButton {
@@ -191,6 +192,8 @@
 
   background-image: linear-gradient(179.77deg, rgba(0, 0, 0, 0) 0.2%, rgba(0, 0, 0, 0.84) 91.5%);
   backdrop-filter: blur(2px);
+
+  z-index: 3;
 }
 
 .content {
